vendor/thiserror-1.0.24/tests/ui/from-not-source.stderr
error: #[from] is only supported on the source field, not any other field
 --> $DIR/from-not-source.rs:7:5
  |
7 |     #[from]
  |     ^^^^^^^
